[package]
name = "quiz"
version = "0.1.0"
authors = ["shubham"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.2"
serde = "1.0.104"
serde_derive = "1.0.104"
serde_json = "1.0.46"
diesel = { version = "1.4.3", features = ["postgres"] }
dotenv = "0.15.0"
[dependencies.rocket_contrib]
rocket_contrib = "0.4.2"
default-features = false
features = ["tera_templates"]